--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     //implementation 'com.github.felHR85:UsbSerial:6.1.0'
+    implementation 'com.annimon:stream:1.2.1'
 }
